# doctown-v13

./: .gitignore  README.md  output.docpack  pyproject.toml
desktop/: package-lock.json  package.json  vite.config.js
desktop/src/: index.html  main.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
src/docpack/: __init__.py  __main__.py  cli.py  flight_deck.py
src/docpack/chunkers/: __init__.py  paragraph_chunker.py
src/docpack/embedders/: __init__.py  sentence_transformer.py
src/docpack/ingesters/: __init__.py  folder_ingester.py  zip_ingester.py
src/docpack/models/: __init__.py  document.py
src/docpack/protocols/: __init__.py  chunker.py  embedder.py  ingester.py
src/docpack/server/: __init__.py  mcp_server.py
src/docpack/storage/: __init__.py  schema.py  store.py
src/docpack/utils/: __init__.py  binary.py
