[project]
name = "docpack"
version = "0.1.0"
description = "The Universal Semantic Container - freeze documents into queryable docpacks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=5.1.2",
    "mcp>=1.0.0",
    "numpy>=1.26.0",
    "textual>=6.6.0",
    "textual-dev>=1.8.0",
]

[project.scripts]
docpack = "docpack.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docpack"]
